# charidotella

./: .gitignore  .gitmodules  README.md  animals.py  configuration-schema.json  pyproject.toml  render-configuration-schema.json  render.py  requirements.txt  setup.py  utilities.py
.github/workflows/: build_wheels.yml
charidotella/: __init__.py  animals.py  charidotella_extension_placeholder.c  formats.py  utilities.py
charidotella/filters/: __init__.py  arbiter_saturation.py  default.py  hot_pixels.py  refractory.py  transpose.py
charidotella/tasks/: __init__.py  colourtime.py  event_rate.py  spatiospectrogram.py  spectrogram.py  video.py  wiggle.py
filters/: arbiter_saturation.py  default.py
tasks/: colourtime.py  event_rate.py  video.py
